--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,4 @@ phases:
   post_build:
     commands:
       # Deploying the application by using Serverless Framework
-      - yarn workspace gc-api serverless deploy
+      - yarn workspace gc-api serverless info
