--- a/services/gc-api/package.json
+++ b/services/gc-api/package.json
@@ -6,8 +6,7 @@
     "scripts": {
       "offline": "node ../../node_modules/serverless/bin/serverless.js offline",
       "package": "node ../../node_modules/serverless/bin/serverless.js package",
-      "deploy:dev": "node ../../node_modules/serverless/bin/serverless.js deploy --stage dev",
-      "deploy:prd": "node ../../node_modules/serverless/bin/serverless.js deploy --stage prd",
+      "deploy": "node ../../node_modules/serverless/bin/serverless.js deploy",
       "info": "node ../../node_modules/serverless/bin/serverless.js info"
     }
   }
