--- a/services/gc-api/package.json
+++ b/services/gc-api/package.json
@@ -6,7 +6,8 @@
     "scripts": {
       "offline": "node ../../node_modules/serverless/bin/serverless.js offline",
       "package": "node ../../node_modules/serverless/bin/serverless.js package",
-      "deploy": "node ../../node_modules/serverless/bin/serverless.js deploy",
+      "deploy": "node ../../node_modules/serverless/bin/serverless.js deploy --stage dev",
+      "deploy:prd": "node ../../node_modules/serverless/bin/serverless.js deploy --stage prd",
       "info": "node ../../node_modules/serverless/bin/serverless.js info"
     }
   }
