--- a/services/gc-api/serverless.yml
+++ b/services/gc-api/serverless.yml
@@ -8,6 +8,8 @@ plugins:
 custom:
   defaultStage: dev
   currentStage: ${opt:stage, self:custom.defaultStage}
+  region: us-east-1
+  accountId: { 'Fn::Join': ['', [{ 'Ref': 'AWS::AccountId' }]] }
   table:
     users: users-${self:provider.stage}
   topic:
@@ -29,17 +31,43 @@ custom:
 provider:
   name: aws
   stage: ${self:custom.currentStage}
-  region: us-east-1
+  region: ${self:custom.region}
   runtime: nodejs12.x
   endpointType: regional
   environment:
-    REGION: { 'Fn::Join': ['', [{ 'Ref': 'AWS::AccountId' }]] }
+    REGION: ${self:provider.region}
     STAGE: ${self:provider.stage}
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
     NODE_TLS_REJECT_UNAUTHORIZED: 0
   tracing:
     lambda: true
     apiGateway: true
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource:
+        - 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:custom.table.user}'
+    - Effect: Allow
+      Action:
+        - sns:Publish
+      Resource:
+        - 'arn:aws:sns:${self:provider.region}:*:${self:custom.topic.activation}'
+    - Effect: Allow
+      Action:
+        - sqs:SendMessage
+        - sqs:GetQueueUrl
+        - sqs:ListQueues
+      Resource:
+        - 'arn:aws:sqs:${self:provider.region}:*:${self:custom.queue.activation}'
+
+package:
+  individually: false
 
 functions:
   hello:
