--- a/services/gc-api/serverless.yml
+++ b/services/gc-api/serverless.yml
@@ -52,7 +52,7 @@ provider:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource:
-        - 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:custom.table.user}'
+        - 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:custom.table.users}'
     - Effect: Allow
       Action:
         - sns:Publish
