--- a/package.json
+++ b/package.json
@@ -9,50 +9,53 @@
     "test": "set NODE_ENV=test && ./node_modules/.bin/jest --ci --coverage --verbose",
     "lint": "./node_modules/.bin/eslint . --fix --ext .ts,.tsx",
     "lint-output": "./node_modules/.bin/eslint-output ",
-    "lint:fixprettier": "./node_modules/.bin/prettier ./services --write"
+    "lint:fixprettier": "./node_modules/.bin/prettier ./services --write",
+    "changed": "./node_modules/.bin/lerna changed",
+    "diff": "./node_modules/.bin/lerna diff",
+    "version": "./node_modules/.bin/lerna version"
   },
   "workspaces": [
     "services/*"
   ],
   "dependencies": {
     "aws-xray-sdk": "^3.2.0",
-    "inversify": "^5.0.5",
+    "inversify": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@jest/types": "^26.6.2",
-    "@types/aws-lambda": "^8.10.74",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/webpack-node-externals": "^2.5.1",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
+    "@types/aws-lambda": "^8.10.64",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^14.14.10",
+    "@types/webpack-node-externals": "^2.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "editorconfig": "^0.15.3",
-    "eslint": "^7.23.0",
+    "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-output": "^2.0.3",
-    "eslint-plugin-jest": "^24.3.4",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-security-node": "^1.0.14",
     "jest": "^26.6.3",
     "jest-html-reporter": "^3.3.0",
     "jest-junit": "^12.0.0",
-    "lerna": "^4.0.0",
+    "lerna": "^3.22.1",
     "prettier": "^2.2.1",
-    "serverless": "^2.34.0",
+    "serverless": "^2.15.0",
     "serverless-cloudformation-sub-variables": "^0.2.1",
-    "serverless-offline": "^6.9.0",
-    "serverless-prune-plugin": "^1.4.4",
-    "serverless-webpack": "^5.4.1",
+    "serverless-offline": "^6.8.0",
+    "serverless-prune-plugin": "^1.4.3",
+    "serverless-webpack": "^5.3.5",
     "source-map-support": "^0.5.19",
-    "ts-jest": "^26.5.4",
-    "ts-json-schema-generator": "^0.89.2",
-    "ts-loader": "^8.1.0",
+    "ts-jest": "^26.4.4",
+    "ts-json-schema-generator": "^0.80.0",
+    "ts-loader": "^8.0.11",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
-    "typescript-json-schema": "^0.50.0",
-    "webpack": "^4.46.0",
+    "typescript": "^4.1.2",
+    "typescript-json-schema": "^0.45.0",
+    "webpack": "^4.44.2",
     "webpack-node-externals": "^2.5.2"
   }
 }
